# cornifer

./: .gitignore  README.md
.github/workflows/: rust.yml
cornifer/: Cargo.toml
cornifer/src/: checkpoint.rs  circle.rs  decompress.rs  errors.rs  header.rs  lib.rs  main.rs  reader.rs
cornifer/testfiles/: .gitignore  README.md  make.pl
demo/: aaaa  demo.py
scry/: Cargo.toml
scry/src/: checkpoint.rs  circle.rs  decompress.rs  deflate.rs  errors.rs  header.rs  huffman.rs  lib.rs  main.rs  reader.rs
scry/testfiles/: 1080-0.txt.gz.infgen  1080-0.txt.hex  README.md  xxd_out_1
