[package]
name = "cornifer"
version = "0.1.0"
edition = "2021"
description = "Script that finds DEFLATE blocks in a GZIP file"
license = "AGPL-3.0-or-later"
repository = "https://github.com/auburnsummer/cornifer"
keywords = ["gzip"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.2.0", features = ["derive"] }
crc = "3.0.1"
flate2 = "1.0.25"
nohash-hasher = "0.2.0"
rand = "0.8.5"
thiserror = "1.0.39"
rusqlite = { version = "0.29.0", features = ["bundled", "blob"] }
indicatif = "0.17.3"

[dev-dependencies]
rstest = "0.16.0"

[profile.release]
debug = true
codegen-units = 1
lto = "fat"
opt-level = 3
