[package]
name = "scry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.2.0", features = ["derive"] }
crc = "3.0.1"
nohash-hasher = "0.2.0"
rand = "0.8.5"
thiserror = "1.0.39"

[dev-dependencies]
flate2 = "1.0.25"
rstest = "0.16.0"
